fixed top alignment for modules

--- a/src/main/css/popular.css
+++ b/src/main/css/popular.css
@@ -1,5 +1,5 @@
 .popular {
-    margin-top: 12px;
+    margin-top: 24px;
     padding: 12%;
     line-height: 1.6em;
     background-color: #333333;
